cmake_minimum_required(VERSION 3.6)
project(encryCBC)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 11)
set($CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lpthread -ldl")

set(Boost_USE_STATIC_LIBS ON)
find_package(Boost 1.63.0 COMPONENTS log thread system regex REQUIRED program_options)
find_package(Threads)

#add_compile_options(-std=c++11)
#set($CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11  -fstack-protector -m64 -lphread")
#set($CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
set(Botan_so "/usr/local/lib/libbotan-2.a")
#set(Botan_so "/usr/local/lib/libbotan-2.so")

include_directories("/usr/local/include/botan-2")
include_directories("/usr/include/boost")
set(SOURCE_FILES main.cpp prettyprint.hpp cicrybotanCBC.hpp)

add_executable(encryCBC ${SOURCE_FILES})
target_link_libraries (encryCBC -ldl)
target_link_libraries (encryCBC ${Botan_so})
target_link_libraries (encryCBC ${Boost_LIBRARIES})
target_link_libraries (encryCBC ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries (encryCBC ${CMAKE_DL_LIBS})
